# SymbolicExpander

./: .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md  argh.h  config.json  expandUtils.py  lint.sh  main.cpp  solve.hpp  solve.hpp.orig  user.json
.github/workflows/: cmake-test.yml
docs/: Doxyfile.in
tests/: CMakeLists.txt  mainTests.cpp
